# FinancialMCP

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: publish.yml
docs/: DESIGN.md
financial_mcp/: __init__.py  anomaly.py  broker.py  cftc.py  db.py  engine.py  fred.py  market_data.py  portfolio.py  regime.py  risk.py  sec_edgar.py  server.py  treasury.py  trends.py  utils.py
scripts/: run_server.py
