[project]
name = "financial-mcp"
version = "0.1.0"
description = "MCP server for AI-powered stock analysis and paper trading"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.31",
    "pyyaml>=6.0",
]

[project.scripts]
financial-mcp = "financial_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
