[project]
name = "financial-mcp-server"
dynamic = ["version"]
description = "MCP server for AI-powered stock market intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Arnav Bhat", email = "arnav.cal@gmail.com"},
]
keywords = ["mcp", "finance", "stock", "trading", "paper-trading", "yfinance", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.31",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "pytrends>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/arnavbhat1/financial-mcp"
Repository = "https://github.com/arnavbhat1/financial-mcp"
Issues = "https://github.com/arnavbhat1/financial-mcp/issues"

[project.scripts]
financial-mcp = "financial_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["financial_mcp*"]

[tool.setuptools.package-data]
financial_mcp = ["../config.yaml"]
